# CapPlan

./: IMPLEMENTATION_SPEC.md  PATCH_SUMMARY_ABILITYBENCH_FIXES.md  PATCH_SUMMARY_CHATGPT_REVIEW.md  PATCH_SUMMARY_CURRENT_REVIEW.md  PATCH_SUMMARY_GIS_SERVICE_BUILDER.md  PATCH_SUMMARY_NUPLAN_GIS_PIPELINE.md  PATCH_SUMMARY_SECOND_REVIEW.md  README.md  pyproject.toml  requirements-nuplan.txt  requirements.txt  setup.py
capplan/: __init__.py
configs/: abilitybench_nuplan_real.yaml  ablations.yaml  capability_profiles.yaml  dataset_nuplan.yaml  default.yaml  demand.small_sanity.example.yaml  experiments.yaml  fleet.abilitybench.example.jsonl  georeference.boston.example.json  georeference.boston.json  georeference.pittsburgh.example.json  georeference.pittsburgh.json  georeference.singapore.json  georeference.vegas.json
scripts/: audit_dataset_quality.py  build_accessibility_graphs.py  build_dataset.py  build_pudo_evidence.py  build_service_layer.py  compute_metrics.py  diagnose_capplan_outputs.py  export_nuplan_closed_loop_jobs.py  extract_nuplan_scenes.py  fetch_abilitybench_external_four_cities.py  import_nuplan_vehicle_metrics.py  merge_datasets.py  prepare_abilitybench_external.py  run_ablations.py  run_closed_loop_eval.py  run_nuplan_closed_loop_pipeline.py  run_planner.py  sample_dem_elevation_jsonl.py  train_casa.py  validate_dataset.py  visualize_service_overlay.py
tests/: test_ablation_semantics.py  test_accessibility_graph_routing.py  test_capability_compiler.py  test_capability_profiles.py  test_casa_training_smoke.py  test_certificates.py  test_metrics.py  (+19 more)
(+124 files in other folders)
