[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capplan"
version = "0.1.0"
description = "Passenger-complete capability-aware autonomous mobility planner"
requires-python = ">=3.10"
dependencies = ["numpy>=1.23", "pandas>=1.5", "pyyaml>=6.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["capplan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
